@@ -6,7 +6,8 @@ Changes in Release 2.3.0
 [SIDP-442] - Add JSESSIONID and ClientIP to MDC
 [SIDP-461] - Add legacy Shib SSO protocol as binding for IdP-initiated SSO for SAML 2.0
 [SIDP-464] - An SPNameQualifier in NameIDPolicy always treated as an affiliation
-[SIDP-468] - Add taglib to simplify rendering login pages. 
+[SIDP-468] - Add taglib to simplify rendering login pages.
+[SIDP-469] - eduPersonTargetedID Could Be Separately Commented
 
 Changes in Release 2.2.1
 =============================================
